<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainFragment">

    <ImageView
        android:id="@+id/card_number_icon"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/card_type" />

    <EditText
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:hint="@string/card_number"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/expiration_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/expiration_mm_yy"
            android:inputType="number"
            android:maxLength="@integer/max_date_length"
            android:maxLines="1" />

        <EditText
            android:id="@+id/security"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/security"
            android:inputType="number"
            android:maxLines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/submit"
        android:textAllCaps="true" />

</LinearLayout>